--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true
-  }
+    "declarationMap": true,
+  },
+  "include": [
+    "src",
+    "tests"
+  ]
 }
