--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,10 @@ name: Run Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
     branches:
-      - main
+      - master
     types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
